--- a/english.html
+++ b/english.html
@@ -265,6 +265,8 @@ Error message and password prompt
 
 <li>A Privileged Man</li>
 
+<li>A tile’s exercise</li>
+
 <li>Abraham Hostel</li>
 
 <li>Acram Hummus</li>
@@ -833,8 +835,6 @@ Error message and password prompt
 
 <li>Pasta Mia</li>
 
-<li>Pavement etude</li>
-
 <li>Pavlova</li>
 
 <li>Peacock</li>
@@ -1116,6 +1116,8 @@ Error message and password prompt
 <li>what does a thing assemble</li>
 
 <li>What have you done for peace today</li>
+
+<li>What truly happensd at Christmas dinner</li>
 
 <li>When people were still optimistic</li>
 
@@ -9008,10 +9010,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200324165308969" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200324183914784" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200324172606681" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200324191243189" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9040,7 +9042,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200324172617749" title="$:/temp/search">
+<div created="20161023184814872" modified="20200324191614488" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9299,6 +9301,35 @@ In fact, when it comes to women I kinda dig the word woman.
 
  &lt;&lt;heblink [[גבר פריבילגי]]&gt;&gt;</pre>
 </div>
+<div created="20200308095214229" modified="20200324192525440" tags="[[Iry claims]] [[How many songs can you even invent at all]]" title="A tile’s exercise">
+<pre>[img[pictures/targil-lebalata.jpg]]
+
+!!![[Iry]]:
+
+I don’t like technique, and the other way around, except for [[Alexander’s technique|Alexander Technique]], that determines, let the neck be free.
+
+I’ve always danced, [[Hora]], [[Dabke]], [[Dassa|https://www.youtube.com/watch?v=uJqF6r-obdg]]. I’ve studied classical ballet, modern dance, folk dancing, [[movement notation|Eshkol-Wachman movement notation]], composition and had other experimental experiences like yoga, tai chi, Feldenkrais… I had a teacher for [[Martha Graham technique|Spiral]] who called me [[Isadora Duncan]]. When I move, I wear street shoes with rubber soles, and think alexanderian. A thought that has been on my mind is, the dance is for the dancer and not the viewer. 
+
+I’ve always loved etudes. I’ve thought about the tile’s exercise in India for the first time, when we lived in the small room, before [[the diving|Searching for Iry]].
+
+It requires a space of 12 tiles, but only 8 of them are being used.
+
+It can be with or without music, each foot on a tile, parallel. The knees are little bit bent and soft, the hips joints soft, [[the lumbar|Necks]]. Free your neck and start two circles, in the first, the right leg comes forward and returns, sideways to the right and returns, backwards and returns, sideways to the right and returns (8 beats). Afterwards with the left leg and exactly the same to the left.
+
+It’s easy to remember it like the folk dances of old times, meaning- four quarters, like dabke or hora, the text is clear, and what’s left is moving and improvising while dancing. 
+
+Should or shouldn’t you shift the weight to the moving leg, speed changes, adding hands motions. When the text is short and clear you can pay attention to the movement, the rhythm, the tempo, the motorial thinking, ect.
+
+This exercise improves the posture, strengthens the back and hips muscles, and if you do it for enough time consecutively and quickly, it improves the endurance. (:
+
+I like to use different types of music. I practice [[gratitude for the sun|Gratitude for the sun]] to the sound of music, which makes everything more pleasant and interesting.
+
+These days I’m enjoying [[Fantasy|https://www.youtube.com/watch?v=fdBTWbQEQ2s]] of [[Miles Davis]], who makes my feet invade other tiles.
+
+
+
+ &lt;&lt;heblink [[תרגיל לבלטה]]&gt;&gt;</pre>
+</div>
 <div created="20200223152720731" modified="20200324165410418" tags="[[Here in the Ghetto]] [[Hunky Dory]] Music" title="Abraham Hostel">
 <pre>[img[pictures/abraham-hostel.jpg]]
 
@@ -9347,7 +9378,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200219184254185" modified="20200324165449527" tags="[[Iry claims]] [[Hunky Dory]]" title="Alexander Technique">
+<div created="20200219184254185" modified="20200324183934841" tags="[[Iry claims]] [[Hunky Dory]]" title="Alexander Technique">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 
@@ -10677,7 +10708,7 @@ The best [[movie|https://en.wikipedia.org/wiki/Cinematography]] I’ve seen late
 
  &lt;&lt;heblink [[קודם כל כרישה ומנגולד]]&gt;&gt;</pre>
 </div>
-<div created="20200308104302002" modified="20200324172621353" tags="[[True stories]]" title="Flip-flopping">
+<div created="20200308104302002" modified="20200324191618511" tags="[[True stories]]" title="Flip-flopping">
 <pre>[img[pictures/tahapochet.jpg]]
 
 
@@ -10844,10 +10875,15 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
  &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
 </div>
-<div created="20200307181155676" modified="20200307182122429" tags="[[Iry claims]] [[The global village]]" title="Gratitude for the sun">
+<div created="20200307181155676" modified="20200324185927340" tags="[[Iry claims]] [[The global village]]" title="Gratitude for the sun">
 <pre>[img[pictures/birkat-hashemesh.jpg]]
 
 
+!!![[Iry]]:
+
+I attended many different yoga methods lessons in my life, and ended with the [[gratitude for the sun|https://en.wikipedia.org/wiki/Surya_Namask%C4%81r]]. It’s a great exercise, that goes through many motions and muscles, but I recommend to do it carefully, and pay attention to the pressures that can occur in certain motions and positions, in the [[necks|Necks]] and over all. 
+
+I like to do it with music, [[as well|A tile’s exercise]], for example [[this|https://www.youtube.com/watch?v=cM4kqL13jGM]] is what I put on today, and thank you [[sun|https://www.youtube.com/watch?v=CtaUWSdgdHE]].
 
 
 
@@ -12362,7 +12398,7 @@ I am too, even though I use [[public transportation|Public Transportation]], sti
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200324171338859" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
+<div created="20200212201643628" modified="20200324191519868" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -12418,8 +12454,15 @@ We celebrated the first birthday of my sweet Nano on November 1st at my parent's
  &lt;&lt;heblink [[ננו שלי ואני]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308094942361" modified="20200308095040412" tags="[[Iry claims]]" title="Necks">
+<div created="20200308094942361" modified="20200324190655145" tags="[[Iry claims]]" title="Necks">
 <pre>[img[pictures/zavarim.jpg]]
+
+
+!!![[Iry]]:
+
+When [[Alexander|F.M.Alexander]] says let the neck be free, he means obviously, to the part that attach the body and the head, where the chain of directions begins.
+
+When I laid down on [[the mattress in India|Searching for Iry]], I’ve seen each joint as a neck, I let them be free, let the head go forward and up, the back lengthen and widen.
 
 
 
@@ -12693,14 +12736,6 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 
 
  &lt;&lt;heblink [[פסטה מיאה]]&gt;&gt;</pre>
-</div>
-<div created="20200308095214229" modified="20200308095351094" tags="[[Iry claims]] [[How many songs can you even invent at all]]" title="Pavement etude">
-<pre>[img[pictures/targil-lebalata.jpg]]
-
-
-
-
- &lt;&lt;heblink [[תרגיל לבלטה]]&gt;&gt;</pre>
 </div>
 <div created="20200306165732517" modified="20200306165851575" tags="Recipes [[Christmas dinner Recipes]]" title="Pavlova">
 <pre>[img[pictures/pavlova.jpg]]
@@ -13361,8 +13396,19 @@ And I say:
  &lt;&lt;heblink [[ספייק לי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200308094626746" modified="20200308094753494" tags="[[Iry claims]] [[Outer sisters]]" title="Spiral">
+<div created="20200308094626746" modified="20200324191237958" tags="[[Iry claims]] [[Outer sisters]]" title="Spiral">
 <pre>[img[pictures/spiral.jpg]]
+
+
+!!![[Iry]]:
+
+The spiral motion of the back is one of the basic motions in the [[dance technique|https://en.wikipedia.org/wiki/Graham_technique]] that was invented by [[Martha Graham|https://en.wikipedia.org/wiki/Martha_Graham]].
+
+While sitting, the spiral motion starts in the pelvis, continues with the chest, the [[neck|Necks]] after.
+
+You don’t wear ballet shoes with Martha, the arms are wide open, the front foot is flexed.
+
+The [[Alexanderian|Alexander Technique]] thinking is very beneficial, in order to reduce the rigidness damages of the [[rigid techniques|Isadora Duncan]]. 
 
 
 
@@ -14486,6 +14532,18 @@ And the mushrooms? Aren't they in pain?
  &lt;&lt;heblink [[מה עשית היום למען השלום]]&gt;&gt;
 
 
+</pre>
+</div>
+<div created="20200324191252112" modified="20200324191544958" tags="Meals [[Hunky Dory]]" title="What truly happensd at Christmas dinner">
+<pre>
+[img[pictures/kie87qScl5HLeyVw.JPG]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[מה שבאמת קרה בארוחת כריסמס]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215164420935" modified="20200215165518955" tags="Once" title="When people were still optimistic">
