--- a/index.html
+++ b/index.html
@@ -9194,7 +9194,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="ספירל [[איזדורה דאנקן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9214,7 +9214,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200324171717960" title="$:/temp/search">
+<div created="20161023184814872" modified="20200324191440270" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10603,7 +10603,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200324161215561" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200324191720971" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -15648,7 +15648,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[What have you done for peace today]]&gt;&gt;
 </pre>
 </div>
-<div created="20161114202954459" modified="20200324164050428" tags="[[האנקי דורי]] ארוחות" title="מה שבאמת קרה בארוחת כריסמס">
+<div created="20161114202954459" modified="20200324191808535" tags="[[האנקי דורי]] ארוחות" title="מה שבאמת קרה בארוחת כריסמס">
 <pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
 !!![[אווה]]:
@@ -15681,7 +15681,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 25 בדצמבר
 בשתיים אחר חצות פיליפ אמר לי ששתיים אחר חצות ושאל אם ארצה לבוא אתו אליו ולישון אתו. התרגשתי כמו ילדה.
 
-</pre>
+
+
+
+
+
+
+&lt;&lt;englink [[What truly happensd at Christmas dinner]]&gt;&gt;</pre>
 </div>
 <div created="20180205175902513" modified="20200212204951293" tags="[[כמה שירים כבר אפשר להמציא בכלל]]" title="מוזיקה">
 <pre>[img[pictures/music.jpg]]
@@ -19831,7 +19837,7 @@ Fapina''
 
 //המשך יבוא//</pre>
 </div>
-<div created="20170806142815034" modified="20200308095446045" tags="[[אירי טוענת]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="תרגיל לבלטה">
+<div created="20170806142815034" modified="20200324184443407" tags="[[אירי טוענת]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="תרגיל לבלטה">
 <pre>[img[pictures/targil-lebalata.jpg]]
 
 !!![[אירי]]:
@@ -19859,7 +19865,7 @@ Fapina''
 
 
 
-&lt;&lt;englink [[Pavement etude]]&gt;&gt;
+&lt;&lt;englink [[A tile’s exercise ]]&gt;&gt;
 
 </pre>
 </div>
