--- a/english.html
+++ b/english.html
@@ -265,7 +265,7 @@ Error message and password prompt
 
 <li>A Privileged Man</li>
 
-<li>A tile’s exercise</li>
+<li>A tile’s etude</li>
 
 <li>Abraham Hostel</li>
 
@@ -9022,7 +9022,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[A tile’s etude]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9301,7 +9301,7 @@ In fact, when it comes to women I kinda dig the word woman.
 
  &lt;&lt;heblink [[גבר פריבילגי]]&gt;&gt;</pre>
 </div>
-<div created="20200308095214229" modified="20200324192525440" tags="[[Iry claims]] [[How many songs can you even invent at all]]" title="A tile’s exercise">
+<div created="20200308095214229" modified="20200324193232173" tags="[[Iry claims]] [[How many songs can you even invent at all]]" title="A tile’s etude">
 <pre>[img[pictures/targil-lebalata.jpg]]
 
 !!![[Iry]]:
