--- a/index.html
+++ b/index.html
@@ -9194,7 +9194,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="ספירל [[איזדורה דאנקן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -19837,7 +19837,7 @@ Fapina''
 
 //המשך יבוא//</pre>
 </div>
-<div created="20170806142815034" modified="20200324184443407" tags="[[אירי טוענת]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="תרגיל לבלטה">
+<div created="20170806142815034" modified="20200324193305972" tags="[[אירי טוענת]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="תרגיל לבלטה">
 <pre>[img[pictures/targil-lebalata.jpg]]
 
 !!![[אירי]]:
@@ -19865,7 +19865,7 @@ Fapina''
 
 
 
-&lt;&lt;englink [[A tile’s exercise ]]&gt;&gt;
+&lt;&lt;englink [[A tile’s etude]]&gt;&gt;
 
 </pre>
 </div>
