--- a/english.html
+++ b/english.html
@@ -9301,7 +9301,7 @@ In fact, when it comes to women I kinda dig the word woman.
 
  &lt;&lt;heblink [[גבר פריבילגי]]&gt;&gt;</pre>
 </div>
-<div created="20200308095214229" modified="20200324193232173" tags="[[Iry claims]] [[How many songs can you even invent at all]]" title="A tile’s etude">
+<div created="20200308095214229" modified="20200324194233373" tags="[[Iry claims]] [[How many songs can you even invent at all]]" title="A tile’s etude">
 <pre>[img[pictures/targil-lebalata.jpg]]
 
 !!![[Iry]]:
@@ -9310,7 +9310,7 @@ I don’t like technique, and the other way around, except for [[Alexander’s t
 
 I’ve always danced, [[Hora]], [[Dabke]], [[Dassa|https://www.youtube.com/watch?v=uJqF6r-obdg]]. I’ve studied classical ballet, modern dance, folk dancing, [[movement notation|Eshkol-Wachman movement notation]], composition and had other experimental experiences like yoga, tai chi, Feldenkrais… I had a teacher for [[Martha Graham technique|Spiral]] who called me [[Isadora Duncan]]. When I move, I wear street shoes with rubber soles, and think alexanderian. A thought that has been on my mind is, the dance is for the dancer and not the viewer. 
 
-I’ve always loved etudes. I’ve thought about the tile’s exercise in India for the first time, when we lived in the small room, before [[the diving|Searching for Iry]].
+I’ve always loved etudes. I’ve thought about the tile’s etude in India for the first time, when we lived in the small room, before [[the diving|Searching for Iry]].
 
 It requires a space of 12 tiles, but only 8 of them are being used.
 
