--- a/index.html
+++ b/index.html
@@ -673,6 +673,8 @@ Error message and password prompt
 
 <li>התדר בואך רומנו</li>
 
+<li>התור לגרציאני</li>
+
 <li>וויקליף ז'אן</li>
 
 <li>וינסנט ואן-גוך</li>
@@ -9185,7 +9187,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200324164917600" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200324165151137" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200325162036349" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9194,7 +9196,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[התור לגרציאני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10603,7 +10605,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200324191720971" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200325161153067" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
@@ -13157,6 +13159,21 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;englink [[Teder/Romano]]&gt;&gt;</pre>
+</div>
+<div created="20200325160820858" modified="20200325162039071" tags="[[כאן בגטו]] [[בתי קפה]] קפה" title="התור לגרציאני">
+<pre>
+[img[pictures/the-line-to-graziani.jpg]]
+
+
+!!![[תומר]]:
+
+כאן עכשיו בזמן קורונה, לא יותר ממאה מטרים מהבית, יניב החמוד [[מגרציאני|גרציאני]] סימן עיגולים בכניסה לקפה במרחק שני מטרים אחד מהשני וחיצים. לא נכנסים לקפה כי עם עומדים בכניסה, את מכונת הקפה שהעמידו עם הפנים כלפי חוץ מפעיל אברהם שמכין קפה מעולה, יניב אחראי על הלחמים והסנדביצים ושאר המאפים הטעימים איתם הולכים ישר הביתה.
+
+
+
+
+&lt;&lt;englink [[The line for Graziani]]&gt;&gt;
+</pre>
 </div>
 <div created="20170602111237129" modified="20200213171027914" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="וויקליף ז'אן">
 <pre>[img[pictures/wyclef-jean.jpg]]
