--- a/english.html
+++ b/english.html
@@ -1033,6 +1033,8 @@ Error message and password prompt
 
 <li>The lawyer</li>
 
+<li>The line for Graziani</li>
+
 <li>The neighbor`s grass</li>
 
 <li>The newspaper desk</li>
@@ -9022,7 +9024,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[A tile’s etude]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The line for Graziani]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9042,7 +9044,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200324191614488" title="$:/temp/search">
+<div created="20161023184814872" modified="20200325160743512" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12398,7 +12400,7 @@ I am too, even though I use [[public transportation|Public Transportation]], sti
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200324191519868" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
+<div created="20200212201643628" modified="20200325161103371" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -13878,6 +13880,16 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 
  &lt;&lt;heblink [[עורכת הדין]]&gt;&gt;</pre>
+</div>
+<div created="20200325160957545" modified="20200325161121987" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="The line for Graziani">
+<pre>
+[img[pictures/the-line-to-graziani.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[התור לגרציאני]]&gt;&gt;
+</pre>
 </div>
 <div created="20200308104605620" modified="20200308104918283" tags="[[Here in the Ghetto]] Houses [[The Baumans]] Metafiction" title="The neighbor`s grass">
 <pre>[img[pictures/hadeshe-shel-hashachen.jpg]]
