--- a/english.html
+++ b/english.html
@@ -9044,7 +9044,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200325160743512" title="$:/temp/search">
+<div created="20161023184814872" modified="20200325185719772" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10122,7 +10122,7 @@ coming soon as possible
  &lt;&lt;heblink [[מנקים היטב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200318190359903" modified="20200322151529326" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
+<div created="20200318190359903" modified="20200325191211079" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
 <pre>[img[pictures/closers.jpg]]
 
 
@@ -10136,7 +10136,7 @@ And grandmother Crawley answers:
 //
 It’s a big risk, but with a little luck they will be happy enough, which is the the British version of a happy ending. //
 
-The ending between Christmas Day and New Years Eve is a great ending. It ties all of the open story lines of all of the heroes we have accompanied for six seasons through the first world war and all the changes that followed.
+The ending between Christmas Day and New Years Eve is a great ending. It ties all of the open story lines of all of the heroes we have accompanied for six seasons through the first world war, through the Spanish flu and all the changes that followed.
 
 An ending is not an end but a point in time up to which a story has been told. I can’t not relate to the point in time where we - the humans of earth -  are at now, - during the Corona days - in which the global village has been taken over by reality stars - and ask:
 
