--- a/index.html
+++ b/index.html
@@ -9196,7 +9196,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[התור לגרציאני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="סגירים [[התור לגרציאני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9216,7 +9216,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200324191440270" title="$:/temp/search">
+<div created="20161023184814872" modified="20200325185531537" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -16514,7 +16514,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20200318190000717" modified="20200322170510926" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]]" title="סגירים">
+<div created="20200318190000717" modified="20200325191040895" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]]" title="סגירים">
 <pre>[img[pictures/closers.jpg]]
 
 !!![[גורה]]:
@@ -16528,7 +16528,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 //הסיכון הוא גדול, אבל עם קצת מזל הם יהיו מאושרים למדי, שזו הגרסה הבריטית לסוף טוב.//
 
-הסגיר שקורה בין חג המולד לערב השנה החדשה, הוא סוף נפלא, הקושר את כל קצוות חוטי העלילה של כל אותם גיבורים אותם ליוינו לאורך 6 עונות דרך מלחמת העולם הראשונה והשינויים שהגיעו אחריה. 
+הסגיר שקורה בין חג המולד לערב השנה החדשה, הוא סוף נפלא, הקושר את כל קצוות חוטי העלילה של כל אותם גיבורים אותם ליוינו לאורך 6 עונות דרך מלחמת העולם הראשונה, השפעת הספרדית והשינויים שהגיעו עימם. 
 
 סגיר הוא לא סוף כי אם רק נקודה בזמן עד אליה סופר לנו הסיפור, ואני לא יכולה שלא להתייחס עכשיו לרגע בו נמצאים אנו - בני האנוש אשר על פני כדור הארץ - רגע בימי קורונה - בו הכפר הגלובלי נשלט על ידי גיבורי ריאליטי - ולשאול:
 
