--- a/index.html
+++ b/index.html
@@ -9196,7 +9196,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="סגירים [[התור לגרציאני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="סגירים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13160,14 +13160,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Teder/Romano]]&gt;&gt;</pre>
 </div>
-<div created="20200325160820858" modified="20200325162039071" tags="[[כאן בגטו]] [[בתי קפה]] קפה" title="התור לגרציאני">
+<div created="20200325160820858" modified="20200325191919936" tags="[[כאן בגטו]] [[בתי קפה]] קפה" title="התור לגרציאני">
 <pre>
 [img[pictures/the-line-to-graziani.jpg]]
 
 
 !!![[תומר]]:
 
-כאן עכשיו בזמן קורונה, לא יותר ממאה מטרים מהבית, יניב החמוד [[מגרציאני|גרציאני]] סימן עיגולים בכניסה לקפה במרחק שני מטרים אחד מהשני וחיצים. לא נכנסים לקפה כי עם עומדים בכניסה, את מכונת הקפה שהעמידו עם הפנים כלפי חוץ מפעיל אברהם שמכין קפה מעולה, יניב אחראי על הלחמים והסנדביצים ושאר המאפים הטעימים איתם הולכים ישר הביתה.
+כאן עכשיו בזמן קורונה, לא יותר ממאה מטרים מהבית, יניב החמוד [[מגרציאני|גרציאני]] סימן עיגולים בכניסה לקפה במרחק שני מטרים אחד מהשני וחיצים. לא נכנסים לקפה כי אם עומדים בכניסה, את מכונת הקפה שהעמידו עם הפנים כלפי חוץ מפעיל אברהם שמכין קפה מעולה, יניב אחראי על הלחמים והסנדביצים ושאר המאפים הטעימים איתם הולכים ישר הביתה.
 
 
 
