--- a/english.html
+++ b/english.html
@@ -9024,7 +9024,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The line for Graziani]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10122,7 +10122,7 @@ coming soon as possible
  &lt;&lt;heblink [[מנקים היטב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200318190359903" modified="20200325191211079" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
+<div created="20200318190359903" modified="20200325192612538" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
 <pre>[img[pictures/closers.jpg]]
 
 
@@ -10133,8 +10133,9 @@ Towards the end of the last episode of the perfect [[Downton Abbey]], a moment b
 //We didn’t always expect a good ending. //
 
 And grandmother Crawley answers:
+
 //
-It’s a big risk, but with a little luck they will be happy enough, which is the the British version of a happy ending. //
+It’s a big risk, but with a little luck they will be happy enough, which is the the British version of a happy ending.// 
 
 The ending between Christmas Day and New Years Eve is a great ending. It ties all of the open story lines of all of the heroes we have accompanied for six seasons through the first world war, through the Spanish flu and all the changes that followed.
 
