--- a/english.html
+++ b/english.html
@@ -9024,7 +9024,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Closers [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10122,7 +10122,7 @@ coming soon as possible
  &lt;&lt;heblink [[מנקים היטב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200318190359903" modified="20200325192612538" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
+<div created="20200318190359903" modified="20200325193039604" tags="TV [[TV Series]] Films [[On the road to somewhere]] [[The global village]]" title="Closers">
 <pre>[img[pictures/closers.jpg]]
 
 
@@ -10139,7 +10139,7 @@ It’s a big risk, but with a little luck they will be happy enough, which is th
 
 The ending between Christmas Day and New Years Eve is a great ending. It ties all of the open story lines of all of the heroes we have accompanied for six seasons through the first world war, through the Spanish flu and all the changes that followed.
 
-An ending is not an end but a point in time up to which a story has been told. I can’t not relate to the point in time where we - the humans of earth -  are at now, - during the Corona days - in which the global village has been taken over by reality stars - and ask:
+An ending is not an end but a point in time up to which a story has been told. I can’t not relate to the point in time where we - the humans of earth -  are at now - during the Corona days - in which the global village has been taken over by reality stars - and ask:
 
 Maybe now, us,  the residents of Toontown, will get the ending that we deserve, like the one of our friends in [[Who Framed Roger Rabbit|https://www.youtube.com/watch?v=5GrUwl1OtoA]]. 
 
