--- a/english.html
+++ b/english.html
@@ -967,6 +967,8 @@ Error message and password prompt
 
 <li>Sultana and Yasmin</li>
 
+<li>Sunny</li>
+
 <li>Tahini, tomatoes and zucchini toasts</li>
 
 <li>Tal Bagels</li>
@@ -9015,7 +9017,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200324183914784" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200324191243189" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200326100632638" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9024,7 +9026,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Closers [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[White rice with pine nuts]] Sunny Closers [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9044,7 +9046,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200325185719772" title="$:/temp/search">
+<div created="20161023184814872" modified="20200326100106609" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10878,7 +10880,7 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
  &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
 </div>
-<div created="20200307181155676" modified="20200324185927340" tags="[[Iry claims]] [[The global village]]" title="Gratitude for the sun">
+<div created="20200307181155676" modified="20200326100146691" tags="[[Iry claims]] [[The global village]]" title="Gratitude for the sun">
 <pre>[img[pictures/birkat-hashemesh.jpg]]
 
 
@@ -10886,7 +10888,7 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
 I attended many different yoga methods lessons in my life, and ended with the [[gratitude for the sun|https://en.wikipedia.org/wiki/Surya_Namask%C4%81r]]. It’s a great exercise, that goes through many motions and muscles, but I recommend to do it carefully, and pay attention to the pressures that can occur in certain motions and positions, in the [[necks|Necks]] and over all. 
 
-I like to do it with music, [[as well|A tile’s exercise]], for example [[this|https://www.youtube.com/watch?v=cM4kqL13jGM]] is what I put on today, and thank you [[sun|https://www.youtube.com/watch?v=CtaUWSdgdHE]].
+I like to do it with music, [[as well|A tile’s etude]], for example [[this|https://www.youtube.com/watch?v=cM4kqL13jGM]] is what I put on today, and thank you [[sun|https://www.youtube.com/watch?v=CtaUWSdgdHE]].
 
 
 
@@ -12401,7 +12403,7 @@ I am too, even though I use [[public transportation|Public Transportation]], sti
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200325161103371" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
+<div created="20200212201643628" modified="20200325193701128" tags="[[How many songs can you even invent at all]] [[Hunky Dory]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -13499,6 +13501,19 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
 
 
  &lt;&lt;heblink [[סולטנה ויסמין]]&gt;&gt;
+</pre>
+</div>
+<div created="20200325193610921" modified="20200325193729377" tags="Music [[How many songs can you even invent at all]] [[Outer sisters]]" title="Sunny">
+<pre>
+
+[img[pictures/sunny.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[Sunny]]&gt;&gt;
 </pre>
 </div>
 <div created="20200306142158905" modified="20200306142331060" tags="Recipes [[Christmas dinner Recipes]]" title="Tahini, tomatoes and zucchini toasts">
@@ -14628,8 +14643,25 @@ they also said tape''
 &lt;&lt;heblink [[כשהם ישנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200306133918926" modified="20200306134051857" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="White rice with pine nuts">
+<div created="20200306133918926" modified="20200326100626143" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="White rice with pine nuts">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
+
+
+!!![[Gura]]: 
+
+First of all, it's actually also the recipe for white rice – it's just that if you want white rice don't add the pine nuts 😊 
+
+In a two-liter pot, add a tablespoon of vegetable oil and one cup of rice. Fry the rice slightly on the mid-sized flame. Add two cups of hot water, half a teaspoon of course sea salt,  and cook on low heat for fifteen to twenty minutes (or until the rice comes out dry with small swirls).
+ 
+When the rice cooks, roast half a cup of pine nuts in the oven or on a pan. 
+
+Turn the heat off the rice and let it stand for ten minutes. 
+
+After ten minutes &quot;open&quot; it by a slight mix. Cover the lid again and leave the pot closed for ten more minutes. 
+
+ the rice is ready to be served. 
+
+Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoning herbs
 
 
 
