--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@ Error message and password prompt
 
 <li>RTLStylesheet</li>
 
+<li>Sunny</li>
+
 <li>TLV</li>
 
 <li>TREME</li>
@@ -9196,7 +9198,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="סגירים [[האחיות כהן]]" title="$:/StoryList">
+<div list="Sunny סגירים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9534,6 +9536,21 @@ well,
 {
     float: right;
 }</pre>
+</div>
+<div created="20200325193323563" modified="20200325194012554" tags="מוזיקה [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]] [[סיפורים אמיתיים]]" title="Sunny">
+<pre>
+[img[pictures/sunny.jpg]]
+
+
+!!![[יויו]]:
+
+
+
+
+
+
+
+&lt;&lt;englink [[Sunny]]&gt;&gt;</pre>
 </div>
 <div created="20190617185651366" modified="20200219161719942" tags="[[כאן בגטו]] בתים" title="TLV">
 <pre>[img[pictures/tlv.jpg]]
@@ -10605,7 +10622,7 @@ well,
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20200325161153067" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
+<div created="20171216194951924" modified="20200325193438670" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה]]:
