--- a/index.html
+++ b/index.html
@@ -9198,7 +9198,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Sunny סגירים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אורז לבן עם צנוברים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9218,7 +9218,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200325185531537" title="$:/temp/search">
+<div created="20161023184814872" modified="20200326100428362" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9538,8 +9538,7 @@ well,
 }</pre>
 </div>
 <div created="20200325193323563" modified="20200325194012554" tags="מוזיקה [[אחיות חוץ]] [[כמה שירים כבר אפשר להמציא בכלל]] [[סיפורים אמיתיים]]" title="Sunny">
-<pre>
-[img[pictures/sunny.jpg]]
+<pre>[img[pictures/sunny.jpg]]
 
 
 !!![[יויו]]:
@@ -10144,7 +10143,7 @@ well,
 
 </pre>
 </div>
-<div created="20170402173414658" modified="20200306134154622" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="אורז לבן עם צנוברים">
+<div created="20170402173414658" modified="20200326100424561" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="אורז לבן עם צנוברים">
 <pre>[img[pictures/orez-lavan-matconim.jpg]]
 
 !!![[גורה]]:
@@ -10153,15 +10152,13 @@ well,
 
 בסיר של שני ליטרים שמים, כף שמן צמחי וכוס אורז, ומטגנים אותו מעט מעל להבה בינונית.
  
-מוסיפים שתי כוסות מים חמים, חצי כפית מלח ים גס, שתי כפות סויה, ומבשלים על אש נמוכה רבע שעה-עשרים דקות. (או עד שהאורז נראה יבש ונפערות בו מערבולות קטנות.)
+מוסיפים שתי כוסות מים חמים, חצי כפית מלח ים גס, ומבשלים על אש נמוכה רבע שעה-עשרים דקות. (או עד שהאורז נראה יבש ונפערות בו מערבולות קטנות.)
 
-בזמן שהאורז מתבשל קולים חצי כוס צנובריםבתנור או על מחבת.
+בזמן שהאורז מתבשל קולים חצי כוס צנוברים בתנור או על מחבת.
 
 מכבים את האורז ונותנים לו לעמוד עשר דקות.
 
-כעבור עשר דקות &quot;פותחים&quot; אותו בערבוב קל.  סוגרים שוב את המכסה ומשאירים את הסיר סגור לעשר דקות נוספות.
-
-לאחר העשרים דקות האורז מוכן להגשה.
+כעבור עשר דקות &quot;פותחים&quot; אותו בערבוב קל. סוגרים שוב את המכסה ומשאירים את הסיר סגור לעשר דקות נוספות, והאורז מוכן להגשה
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.
 
@@ -13178,8 +13175,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[Teder/Romano]]&gt;&gt;</pre>
 </div>
 <div created="20200325160820858" modified="20200325191919936" tags="[[כאן בגטו]] [[בתי קפה]] קפה" title="התור לגרציאני">
-<pre>
-[img[pictures/the-line-to-graziani.jpg]]
+<pre>[img[pictures/the-line-to-graziani.jpg]]
 
 
 !!![[תומר]]:
