--- a/english.html
+++ b/english.html
@@ -9017,7 +9017,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200324183914784" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200326100632638" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200330122726628" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9026,7 +9026,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[White rice with pine nuts]] Sunny Closers [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9046,7 +9046,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200326100106609" title="$:/temp/search">
+<div created="20161023184814872" modified="20200330121320973" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10593,8 +10593,43 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 
 </pre>
 </div>
-<div created="20200217174816634" modified="20200217174955087" tags="[[The estate]] Children" title="Eva`s family tree">
+<div created="20200217174816634" modified="20200330122731025" tags="[[The estate]] Children" title="Eva`s family tree">
 <pre>[img[pictures/eva-garinit.jpg]]
+
+
+
+!!![[Eva]]:
+
+
+And this is what I told [[Yoyo]] as I wrote in the [[9-side-wishing-star]], in the second day of my arrival to his Parisian flat for [[Christmas dinner]]. It was the day before the dinner, in December 23rd 2015. The things written ahead are an attempt to describe my childhood landscape to Yoyo, who responds every once in a while:
+
+ Imagine: a huge yard divided into houses. A sort of neighbourhood. A huge, closed neighbourhood and within it seven big houses. Seven villas that between them lie beautiful gardens, full of trees. Every house is at around 300-400 square meters and around them there are ten dunams of dense vegetation. Next to every house there is a building for workers, as well as workshops and sheds. The whole estate spreads to a territory of a hundred and fifty dunams. Around them lies a wide and spectacular boulevard which a creek divides into two. Colorful flowers grow on the sides of the roads and pathways, and birds chirp. We were a very rich family, both in money and in assets, and we still are. Many dunams of fields surrounded [[the estate|The estate]]. Corn fields, wheat fields, vegetable fields, vineyards and olive groves, orange, lemon and deciduous orchards. There was a big pen in the northern part of the estate, and a stable next to it. There were also a winery, a canning factory, a carpentry shop and an extensive kitchen. The kitchen was in a big house and three women were working there. They would cook and bake remarkable food for us all. [[Iris]], one of the three, was like a mother to me. Next to the kitchen there was another building that was used as a sort of a club. It had low tables with arm chairs, dining tables, a coffee machine and games. Each big building housed one of the seven wives of my father and her off-springs. To be precise, In five of the houses lived my father’s wives because the first wife died many years ago, and [[my beautiful mother|Hanna our mother]] died when I was four. I had twenty three half siblings and one full brother. I mean, [[my father|Our Father]] had twenty five sons and daughters in total. All of the children studied together until the 8th grade and were divided into groups based on their progress. The boys were taught to work in the fields, with the livestock, metalworking, accounting, carpentry and all sorts of works and labours. The girls were taught how to be great housekeepers. We were taught how to do everything including handicraft, music and dancing. Between the 8th and the 12th grade we went to study in the regional school half an hour drive away from the estate. 
+
+Have you managed to imagine everything until this point?
+
+Oh!! I’m dying!! 
+
+I laughed out loud. 
+
+It’s a story with a picturesque view, my darling Yoyo. Our father lives in the same house he had lived his entire life, apart from the seven years he had lived with his first wife in a house that became my own, which his parents had built for him before his first marriage. My house was our father’s favorite. He was his parent’s only child and after they had passed away he went back to his childhood home with Perla, his first wife whom he married when he was twenty two. They had three boys. Perla, my father’s first wife, was an exemplary housewife. After he went back to his parents house Perla asked to leave their house empty even though he was about to take on a second wife. When he was twenty nine he married Nurit, following his parents wishes to take another wife after Perla broke her pelvis two years prior. His parents wanted to ensure their family’s continuity and encouraged my father to bring more offsprings to the world. So he had built Nurit a new house. My house was located in the north-western spot of the huge yard around the creek. From one side of my house, in a pretty long distance, Nurit lived with her four sons, and from the other side, across the creek lived Malka with her two sons and three daughters. Nurit’s boys were wild and relentless. My mother was my father’s fourth wife. He married her not long after marrying Malka. She got sick when she gave birth to me. It wasn’t an illness really, but she lost a huge amount of blood after the birth because of a complication in her uterus. She overcame the complication but suffered from many illnesses. I had a caretaker as well as a nursing mother. We were living together my mother, [[brother|My whole brother Aharon]] and I. She died as I turned four. Her name was Hanna. My brother was eleven years older than me. He always looked after me as much as he could. Sometimes he went out for drives and as he grew up his duties and responsibility grew as well. My brother became sort of the minister of foreign affairs of the entire family. He was the one who knew how to speak in foreign languages, he knew how to have a conversation with anyone, he was the one who could spur trust and affection among fellow human beings. My big brother swapped many women and was a big and alluring man. During the days when my brother Aharon was traveling my father made me stay with Malka, and my resistance was of no use. 
+
+“I’m cold and shivering Yoyo” we went inside and made more coffee and drank water and ate cashew nuts and little black raisins and we roamed about and hugged and walked around the house some more - Yoyo being a proud peacock. We sat next to the dining table and looked at each other. “I want you to keep on going, I’m fascinated”. He said. 
+
+There were three other wives, Lilian, Dvora and the beloved Rachel. Father was like a tree, I kept on going, his back was strong and erect as a trunk, and his stature tall. He was wise and talkative but he preferred to deal as little as possible with everything that had to do with business and spent his days in the fields. Naturally with time, and although there were older siblings than him, my brother turned to be his go to guy. In the days after my mother’s death, Malka and Nurit, the neighbouring mother, looked after us. Malka invested hours of her time and effort on us and tried to take us into her custody. Luckily enough my brother was old and determined enough to know that Malka coveted our house, that our father had loved. 
+
+I’m telling you these things now, years after living in that closed estate and almost 32 years after leaving it. I found a loophole through which I escaped from the estate to the world outside, which I didn’t actually know during the first eighteen years of my life. I suffered my step mothers only out of respect for my father, just as I suffer my step siblings only out of respect for my family, even though they are not all undeserving. Some were great siblings and I love them very much. You can only try and imagine how many off-springs were born out of twenty five brothers and sister…? More than a few, that’s for sure. 
+
+I think that I have many questions for you. But my first question is, my dear woman, is this thing legal? 
+
+It happened in a different time and place, and yes, it was legitimate even though it was not popular, and father went far ahead with  using the legitimacy. I’m happy that today it’s behind me and I live in a totally different place. Close again to father who is 92, close to Aharon that in a week will turn 60, and close to [[Edith]], an half sister, the daughter of Malka, my father’s third wife. She is as old as me. Also close to Nicki who’s the next to last sister, and the daughter of Rachel, my father youngest and most wonderful wife who loved me very much and I loved her. I met Nicki somewhat late. I will draw you my family tree one day. It’s a tangled and thick story with the amount of trees that one brain cannot comprehend, I am not sure how much of it I’m going to tell you, surely not now. Our father didn’t take much care of us, but every morning at a quarter to eight we would all get together in the middle of the estate, close to the creek, where there was a small stage, a paved lot and a few grove trees. Father, was on the one hand an artistic character and on the other so tough that he was scary, met us all at that lot. 
+
+My darling Yoyo… I am not yet sure how to speak about the first eighteen years of my life and therefore I don’t usually talk about them. I will tell you a lot more Yoyoka, I have enough to tell you even if I won’t get in this stage to the things I can’t speak about yet. Meanwhile, I want to tell you one more thing that happened this estate. 
+
+
+[img[pictures/aba-etz.jpg]]
+
+
+In the family meetings in the mornings my father used to stand before us and hold not a very long ceremony in which he first wished us and we wished him a good morning. After that he would guide us in breath work for a few minutes. Then he would look into the eyes of each one of us and say: Now you, my darling children, can ask for one thing that you wish for from the 9 side wishing star. Everyone went silent. Then our father smiled a wide smile, placed his hands together joyfully, blessed us for a good and productive day, and from there we each went to our respective assignments. 
 
 
 
@@ -11256,8 +11291,7 @@ The [[Hora|https://en.wikipedia.org/wiki/Hora_(dance)]] is danced in a [[circle|
 </pre>
 </div>
 <div created="20200324161242929" modified="20200324162024622" tags="Music [[How many songs can you even invent at all]]" title="Hunky Dory">
-<pre>
-[img[pictures/hunky-dory.jpg]]
+<pre>[img[pictures/hunky-dory.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[Hunky Dory]]&quot;&gt;&gt;
@@ -13505,7 +13539,6 @@ We rejoiced and danced and sang and ate her magnificent [[semolina cake|Semolina
 </div>
 <div created="20200325193610921" modified="20200325193729377" tags="Music [[How many songs can you even invent at all]] [[Outer sisters]]" title="Sunny">
 <pre>
-
 [img[pictures/sunny.jpg]]
 
 
@@ -13898,8 +13931,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
  &lt;&lt;heblink [[עורכת הדין]]&gt;&gt;</pre>
 </div>
 <div created="20200325160957545" modified="20200325161121987" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]]" title="The line for Graziani">
-<pre>
-[img[pictures/the-line-to-graziani.jpg]]
+<pre>[img[pictures/the-line-to-graziani.jpg]]
 
 
 
@@ -14563,8 +14595,7 @@ And the mushrooms? Aren't they in pain?
 </pre>
 </div>
 <div created="20200324191252112" modified="20200324191544958" tags="Meals [[Hunky Dory]]" title="What truly happensd at Christmas dinner">
-<pre>
-[img[pictures/kie87qScl5HLeyVw.JPG]]
+<pre>[img[pictures/kie87qScl5HLeyVw.JPG]]
 
 
 
